--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+
 # This file is used to ignore files which are generated
 # ----------------------------------------------------------------------------
 
@@ -72,3 +73,5 @@ CMakeLists.txt.user*
 *.dll
 *.exe
 
+# Ignore build directories
+build/
